--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,26 @@
 body {
     background: #141414;
 }
+
+.home {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    grid-template-areas:
+        "header"
+        "main"
+        "footer"    
+    ;
+
+}
+
 nav {
+    display: grid;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0.5em 5%;
+    grid-area: header;
 }
 
 nav a {
@@ -93,9 +108,10 @@ button:hover {
 
 .personal-detail {
     align-items: center;
-    display: flex;
+    display: grid;
     justify-content: center;
     height: 100vh;
+    grid-area: main;
 }
 
 .introduction {
@@ -181,4 +197,6 @@ footer {
     padding: 20px 0;
     border-top: 5px solid;
     border-color: #bbbaad;
+    display: grid;
+    grid-area: footer;
 }
