--- a/styles.css
+++ b/styles.css
@@ -296,3 +296,78 @@ footer {
  .video-link:hover {
     color: #9f9a53;
  }
+
+ /* contact page css */
+
+
+input {
+    padding: 0.5em;
+    margin-top: 0.5;
+    background: #cecece;
+    border-radius: 0.5em;
+    margin-bottom: 0.5em;
+    
+}
+
+.contact-form h2{
+    color: #bbbaad;
+    font-family: outfit , sans-serif;
+    display: flex;
+}
+
+.contact-form {
+
+    flex-direction: column;  
+    background: #022f35;
+    padding: 1em;
+    padding-right: 2em;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    margin-top: 4em;
+    margin-bottom: 1em;
+    border-radius: 20px;
+    margin-left: 40%;
+    margin-right: auto;
+    max-width: 350px;
+}
+
+.contact-form label {
+    color: #cecece;
+    font-family: outfit , sans-serif;
+}
+
+form div {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.contact-form input, textarea {
+    color: #000000;
+    width: 250px;
+    border: none;
+    padding-right: 5em;
+}
+
+.form-message input, textarea {
+    font-size: 15px;
+
+}
+
+.form-message textarea {
+    resize: none;
+}
+
+input[type="submit"], input[type="reset"] {
+    color: #022f35;
+    cursor: pointer;
+    border: #000000 solid;
+    width: 325px;
+}
+
+.contact-form input[type="submit"]:hover, .contact-form input[type="reset"]:hover {
+    background: #000000;
+    color: white;
+}
+
